# Claude-Clean

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/memory/: session-2026-02-02.md
src/claude_clean/: __init__.py
